[gd_scene load_steps=9 format=2]

[ext_resource path="res://TextureRect.gd" type="Script" id=1]
[ext_resource path="res://Label.gd" type="Script" id=2]
[ext_resource path="res://BetterPixels.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://torchLife.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.960784, 0.00392157, 0.490196, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 4 )

[node name="Battery" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="Battery"]

[node name="CollisionShape" type="CollisionShape" parent="Battery/Area"]
shape = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Battery"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Battery/TextureRect"]
visible = false
margin_left = 0.44545
margin_top = 1.33636
margin_right = 106.445
margin_bottom = 27.3364
custom_fonts/font = SubResource( 4 )
text = "Batteries"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Battery/Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_entered" from="Battery/Area" to="Battery/TextureRect" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Battery/Area" to="." method="_on_Area_mouse_exited"]
[connection signal="mouse_exited" from="Battery/Area" to="Battery/TextureRect" method="_on_Area_mouse_exited"]
